--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password = WFc9UQiIl3
 ## Hibernate Properties
 spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 # Security
 spring.security.enabled=false
