--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password = WFc9UQiIl3
 ## Hibernate Properties
 spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, validate, update)
+# When running app for the first time change value to create, run app, change to update and run again
 spring.jpa.hibernate.ddl-auto = update
 
 # Security
