--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ management.security.enabled=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 #Enable hotswapping
-spring.thymeleaf.cache = false
+spring.thymeleaf.cache = true
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
