--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://remotemysql.com:3306/0kQps5DyRu
-spring.datasource.username = 0kQps5DyRu
-spring.datasource.password = WFc9UQiIl3
+#spring.datasource.url = jdbc:mysql://remotemysql.com:3306/0kQps5DyRu
+#spring.datasource.username = 0kQps5DyRu
+#spring.datasource.password = WFc9UQiIl3
 
+spring.datasource.url = jdbc:mysql://localhost:3306/smanager?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username = jacor
+spring.datasource.password = #Dupa123
 
 ## Hibernate Properties
 spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, validate, update)
 # When running app for the first time change value to create, run app, change to update and run again
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 
 # Security
 spring.security.enabled=false
