--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,11 @@ spring.datasource.password = WFc9UQiIl3
 spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, validate, update)
 # When running app for the first time change value to create, run app, change to update and run again
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.initialization-mode = always
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Security
 spring.security.enabled=false
