--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ management.security.enabled=false
 #spring.security.user.name = root
 #spring.security.user.password = root
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.resources.add-mappings=true
 
 #Enable hotswapping
 spring.thymeleaf.cache = true
