--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.datasource.url = jdbc:mysql://localhost:3306/smanager?useSSL=false&server
 spring.datasource.username = jacor
 spring.datasource.password = #Dupa123
 
+#spring.datasource.url = jdbc:mysql://localhost:3306/smanager
+#spring.datasource.username = cjusz
+#spring.datasource.password = anitka
+
 ## Hibernate Properties
 spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, validate, update)
