Small bundle fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password = #Dupa123
 #spring.datasource.password = anitka
 
 ## Hibernate Properties
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, validate, update)
 # When running app for the first time change value to create, run app, change to update and run again
 spring.jpa.hibernate.ddl-auto = create
@@ -26,7 +26,7 @@ management.security.enabled=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 #Enable hotswapping
-spring.thymeleaf.cache = true
+spring.thymeleaf.cache = false
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
